<resources>
    <string name="app_name">Housin</string>
    <string name="termos_compromisso">O Serviço Housin:

        Concordamos em fornecer a você o Serviço do Housin.
        O Serviço inclui todos os recursos, serviços, tecnologias
        e software do Housin que fornecermos para promover a
        missão do Housin: auxiliar a união de pessoas com gostos
        semelhantes e criar um vínculo em uma residência.
        O Serviço é composto pelos seguintes aspectos:
        Oferecer oportunidades personalizadas de criar, conectar, comunicar, descobrir e compartilhar.
        Promover um ambiente seguro, inclusivo e positivo.
        Desenvolver e usar tecnologias que nos ajudam a servir consistentemente nossa crescente comunidade.
        A Política de Dados
        Fornecer nosso Serviço exige a coleta e o uso de suas informações. Você deve concordar com a Política de Dados
        para usar o Housin.
        Seus Compromissos
        Em troca de nosso compromisso em fornecer o Serviço, exigimos que você se comprometa com o exposto a seguir.
        Queremos que nosso Serviço seja o mais aberto e inclusivo possível, mas também desejamos que ele seja seguro e
        esteja em conformidade com a lei. Por isso, precisamos que você se comprometa em relação a algumas restrições
        para fazer parte da comunidade do Housin.
        Você deve ter pelo menos 13 anos ou a idade mínima legal em seu país para usar o Housin.
        Sua conta não pode ter sido desativada por nós por violação da lei ou de qualquer uma de nossas políticas.
        Você não pode ter sido condenado por crime sexual.
        Você não pode se passar por outras pessoas ou fornecer informações imprecisas.
    </string>

    <string name="title_activity_favoritos">FavoritosActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>
    <string name="button_Favoritos">Button</string>
    <string name="botão">Butão</string>
    <string name="title_activity_meus_anuncios">MeusAnunciosActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drama">Drama</string>
    <string name="policiais">Policiais</string>
    <string name="anime">Anime</string>
    <string name="ficcao_cientifica">Ficção Científica</string>
    <string name="romantico">Romântico</string>
    <string name="comedia_romantica">Comédia Romântica</string>
    <string name="comedia">Comédia</string>
    <string name="terror">Terror</string>
    <string name="sexo">Sexo:</string>
    <string name="feminino">Feminino</string>
    <string name="masculino">Masculino</string>
    <string name="limpo">Limpo?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="organizado">Organizado?</string>
    <string name="comportamento">Comportamento</string>
    <string name="introvertido">Introvertido</string>
    <string name="extrovertido">Extrovertido</string>
    <string name="responsavel">Responsável?</string>
    <string name="fuma">Fuma?</string>
    <string name="pop">Pop</string>
    <string name="rock">Rock</string>
    <string name="brega_recife">Brega Recife</string>
    <string name="funk">Funk</string>
    <string name="pagode">Pagode</string>
    <string name="indie">Indie</string>
    <string name="eletronica">Eletrônica</string>
    <string name="hiphop">Hip Hop</string>
    <string name="rap">Rap</string>
    <string name="metal">Metal</string>
    <string name="jazz">Jazz</string>
    <string name="folk">Folk</string>
    <string name="rb"><![CDATA[R&B]]></string>
    <string name="forro">Forró</string>
    <string name="classica">Clássica</string>
    <string name="quadrinhos">Quadrinhos</string>
    <string name="manga">Mangá</string>
    <string name="romance">Romance</string>
    <string name="religioso">Religioso</string>
    <string name="infanto_juvenil">Infanto Juvenil</string>
    <string name="fantasia">Fantasia</string>
    <string name="academico">Acadêmico</string>

</resources>