<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MusicasFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:src="@drawable/music" />

        <Switch
            android:id="@+id/switch_pop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/pop"
            android:drawablePadding="5dp"
            android:text="@string/pop" />

        <Switch
            android:id="@+id/switch_brega"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/bregarecife"
            android:drawablePadding="5dp"
            android:text="@string/brega_recife" />

        <Switch
            android:id="@+id/switch_rock"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/rock"
            android:drawablePadding="5dp"
            android:text="@string/rock" />

        <Switch
            android:id="@+id/switch_funk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/funk"
            android:drawablePadding="5dp"
            android:text="@string/funk" />

        <Switch
            android:id="@+id/switch_pagode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/pagode"
            android:drawablePadding="5dp"
            android:text="@string/pagode" />

        <Switch
            android:id="@+id/switch_indie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/indie"
            android:drawablePadding="5dp"
            android:text="@string/indie" />

        <Switch
            android:id="@+id/switch_eletronica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/eletronica"
            android:drawablePadding="5dp"
            android:text="@string/eletronica" />

        <Switch
            android:id="@+id/switch_hiphop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/hipohop"
            android:drawablePadding="5dp"
            android:text="@string/hiphop" />

        <Switch
            android:id="@+id/switch_rap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/rap"
            android:drawablePadding="5dp"
            android:text="@string/rap" />

        <Switch
            android:id="@+id/switch_metal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/heavymetal"
            android:drawablePadding="5dp"
            android:text="@string/metal" />

        <Switch
            android:id="@+id/switch_jazz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/jazz"
            android:drawablePadding="5dp"
            android:text="@string/jazz" />

        <Switch
            android:id="@+id/switch_jazz"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/folk"
            android:drawablePadding="5dp"
            android:text="@string/folk" />

        <Switch
            android:id="@+id/switch_rb"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/rb"
            android:drawablePadding="5dp"
            android:text="@string/rb" />

        <Switch
            android:id="@+id/switch_forro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/forro"
            android:drawablePadding="5dp"
            android:text="@string/forro" />

        <Switch
            android:id="@+id/switch_classica"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="5dp"
            android:drawableStart="@drawable/classic"
            android:drawablePadding="5dp"
            android:text="@string/classica" />

        <Button
            android:id="@+id/img_btn_next5"
            android:layout_width="match_parent"
            android:layout_height="39dp"
            android:layout_gravity="bottom"
            android:layout_marginStart="136dp"
            android:layout_marginLeft="136dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="136dp"
            android:layout_marginRight="136dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/button_laranja"
            android:text="Cadastrar"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/telefone" />

    </LinearLayout>
</FrameLayout>